jitfailure-dolfin_expression_514a65c2cfef3b774b419f9dde51e960/error.log
/tmp/tmp6l6s_sfb/dolfin_expression_514a65c2cfef3b774b419f9dde51e960.cpp: In member function 'virtual void dolfin::dolfin_expression_514a65c2cfef3b774b419f9dde51e960::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmp6l6s_sfb/dolfin_expression_514a65c2cfef3b774b419f9dde51e960.cpp:61:32: error: invalid type argument of unary '*' (have 'int')
   61 |           values[0] = 1 + x[0]**2 + 2 * x[1]**2;
      |                                ^~
/tmp/tmp6l6s_sfb/dolfin_expression_514a65c2cfef3b774b419f9dde51e960.cpp:61:46: error: invalid type argument of unary '*' (have 'int')
   61 |           values[0] = 1 + x[0]**2 + 2 * x[1]**2;
      |                                              ^~
